--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,47 +1,49 @@
-<!-- views/signup.ejs -->
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Node Authentication</title>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+	<title>Expense Tracker</title>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 	<style>
-		body 		{ padding-top:80px; }
+		body {
+			background-color: #f1f1f1;
+		}
 	</style>
 </head>
 <body>
-<div class="container">
+    <nav style="overflow-y: hidden;">
+        <div class="nav-wrapper blue">
+            <a class="brand-logo" style="padding-left: 1vw;">Expense Tracker</a>
+        </div>
+    </nav>
+	<div class="container" style="width: 30%;">
 
-<div class="col-sm-6 col-sm-offset-3">
+        <div class="section">
+            <div class="col s12">
+                <!-- show any messages that come back with authentication -->
+                <% if (message.length > 0) { %>
+                <div class="card-panel"><%= message %></div>
+                <% } %>
 
-	<h1><span class="fa fa-sign-in"></span> Signup</h1>
+                <!-- LOGIN FORM -->
+                <form action="/signup" method="post">
+                    <div class="form-group">
+                        <label>Username</label>
+                        <input type="text" class="form-control" name="username">
+                    </div>
+                    <div class="form-group">
+                        <label>Password</label>
+                        <input type="password" class="form-control" name="password">
+                    </div>
 
-	<!-- show any messages that come back with authentication -->
-	<% if (message.length > 0) { %>
-		<div class="alert alert-danger"><%= message %></div>
-	<% } %>
-
-	<!-- LOGIN FORM -->
-	<form action="/signup" method="post">
-		<div class="form-group">
-			<label>Username</label>
-			<input type="text" class="form-control" name="username">
-		</div>
-		<div class="form-group">
-			<label>Password</label>
-			<input type="password" class="form-control" name="password">
-		</div>
-
-		<button type="submit" class="btn btn-warning btn-lg">Signup</button>
-	</form>
-
-	<hr>
-
-	<p>Already have an account? <a href="/login">Login</a></p>
-	<p>Or go <a href="/">home</a>.</p>
-
-</div>
-
-</div>
+                    <div class="row">
+                        <button type="submit" class="waves-effect waves-light btn col s2 offset-s10 blue">Signup</button>
+                    </div>
+                </form>
+                <hr>
+                <p>Already have an account? <a href="/login">Login</a></p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
